# atlas

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release-windows.yml  release.yml
assets/runbooks/: aes67-audio-dropouts.yaml  aes67-stream-not-received.yaml  cisco-port-soft-recovery.yaml  dante-aes67-interop.yaml  dante-audio-dropouts.yaml  dante-device-unreachable.yaml  dante-latency-too-high.yaml  igmp-multiple-queriers.yaml  igmp-no-querier.yaml  l2-loop-stp-instability.yaml  lldp-no-neighbor.yaml  multicast-flooding.yaml  ptp-domain-mismatch.yaml  ptp-jittery-sync.yaml  ptp-multiple-grandmasters.yaml  qos-misconfigured.yaml
assets/skill-packs/: cisco-ios.toml  cisco-nxos.toml  extreme-exos.toml  luminex-gigacore.toml  mikrotik-routeros.toml  netgear-avline.toml  q-sys-core.toml  tplink-omada.toml  unifi.toml
docs/: PLAN.md
src/: App.simple.tsx.bak  App.tsx  index.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  llm.rs  main.rs  monitor.rs  narrator.rs  ollama_install.rs  oui.rs  process_util.rs  profiles.rs  sampler.rs  settings.rs  stress.rs  types.rs  wifi_events.rs  wifi_gen.rs
src-tauri/src/collectors/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
src-tauri/src/detect/: anomaly.rs  mod.rs  rules.rs  trends.rs
src-tauri/src/device/: approval.rs  audit.rs  exec_tool.rs  https.rs  inventory.rs  keychain.rs  mod.rs  pack.rs  parsers.rs  ssh.rs  validators.rs
src-tauri/src/discovery/: arp.rs  classify.rs  ipscan.rs  mdns.rs  mod.rs  oui.rs  oui_db.tsv  scan.rs
src-tauri/src/probes/: agent.rs  av.rs  captive.rs  channel_scan.rs  dante.rs  deep.rs  dns_leak.rs  dscp.rs  elevate.rs  iface.rs  interference.rs  linkaudit.rs  lldp.rs  macos_corewlan.rs  mod.rs  mtu.rs  multicast.rs  npcap.rs  phy_efficiency.rs  ptp.rs  quality.rs  reachability.rs  roaming.rs  rogue.rs  sap.rs  services.rs  speed_test.rs  stp.rs  traceroute.rs  wan.rs
src-tauri/src/recommend/: mod.rs
src-tauri/src/runbook/: engine.rs  expr.rs  library.rs  mod.rs  narrate.rs  tools.rs
src-tauri/src/store/: mod.rs  persist.rs  schema.rs
src-tauri/swift/: nearby_scan-Info.plist  nearby_scan.swift
src-tauri/tests/: live_scan.rs
src/components/: AiExplanation.tsx  AlternateApBanner.tsx  ApprovalModal.tsx  AssistantDock.tsx  AuditLogPanel.tsx  AvDiagnostics.tsx  AvInsights.tsx  AvInterfacePicker.tsx  ChannelMap.tsx  ChatPanel.tsx  DeviceList.tsx  FindingsList.tsx  HistoryPanel.tsx  HostInventoryPanel.tsx  IncidentTimeline.tsx  IpScannerPanel.tsx  KpiRow.tsx  KpiTile.tsx  LinkDetailsPanel.tsx  LiveMetricsChart.tsx  LivePauseControl.tsx  MetricCharts.tsx  ModeToggle.tsx  NarrativePanel.tsx  NearbyApTable.tsx  NetworkPathPanel.tsx  NicPicker.tsx  OllamaBanner.tsx  OnboardingWizard.tsx  PermissionsCard.tsx  PhyEfficiencyBadge.tsx  QualityPanel.tsx  RadioInsights.tsx  RoamingPanel.tsx  RogueApPanel.tsx  RunbookBuilder.tsx  RunbookEditor.tsx  RunbooksPanel.tsx  ScanMetaFooter.tsx  ServiceStatus.tsx  (+11 more)
src/styles/: atlas-tokens.css
