[package]
name = "atlas"
version = "0.1.10"
description = "Atlas — AI-assisted Wi-Fi & LAN diagnostics"
authors = ["Andre Boyer"]
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "net"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"

mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
socket2 = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-core-location = "0.3.2"
objc2-core-wlan = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Win32 bindings used for:
#   * GetAdaptersAddresses     — physical-NIC enumeration for AV picker
#   * IP_UNICAST_IF setsockopt — per-iface socket pinning (AV probes)
#   * WSAIoctl SIO_RCVALL_IGMPMCAST — passive IGMP listen via raw socket
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

