[package]
name = "atlas"
version = "0.2.3"
description = "Atlas — AI-assisted Wi-Fi & LAN diagnostics"
authors = ["Andre Boyer"]
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "net"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
parking_lot = "0.12"

mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
sha2 = "0.10"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
socket2 = "0.5"
libc = "0.2"

# YAML parser for the runbook engine. `serde_yaml` (the canonical crate) was
# archived in 2024; `serde_yaml_ng` is the maintained drop-in fork used by
# the broader Rust ecosystem post-archive. We parse runbooks once at startup,
# so runtime cost is negligible.
serde_yaml_ng = "0.10"

# Skill-pack catalogues + host inventory are TOML on disk. `toml` 0.8 ships a
# stable typed deserializer with good error messages.
toml = "0.8"

# OS keychain for switch/controller credentials (Phase 2). `keyring` v3 uses
# Keychain on macOS, Credential Manager on Windows, and Secret Service on
# Linux (with kwallet fallback). No credentials live in settings.json or in
# the agent prompt — the runbook engine receives a host *handle*, not a
# password.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Hand-rolled per-skill-pack output parsers use named-capture regex.
regex = "1"

# HTTPS controllers (TP-Link Omada, UniFi, Luminex GigaCore) are stateful —
# the controller hands back a session cookie on login that needs to ride on
# every subsequent request. `reqwest_cookie_store` keeps the jar per-host
# without breaking reqwest's existing rustls config.
reqwest_cookie_store = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-core-location = "0.3.2"
objc2-core-wlan = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
# Win32 bindings used for:
#   * GetAdaptersAddresses     — physical-NIC enumeration for AV picker
#   * IP_UNICAST_IF setsockopt — per-iface socket pinning (AV probes)
#   * WSAIoctl SIO_RCVALL_IGMPMCAST — passive IGMP listen via raw socket
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

